--- a/sprint2-frontend/src/app/authentication/login/login.component.html
+++ b/sprint2-frontend/src/app/authentication/login/login.component.html
@@ -1,1 +1,132 @@
-<p>login works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Giao Diện Đăng nhập</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    .loginPage {
+      background-image: url("https://sika.scene7.com/is/image/sika/glo-car-parking-garage-floor-03?wid=1280&crop=0%2C114%2C3840%2C2443");
+      background-size: 100%;
+      height: 100%;
+      background-position: center;
+      background-repeat: no-repeat;
+    }
+    * {
+      box-sizing: border-box;
+    }
+    .fb {
+      background-color: #3B5998;
+      color: white;
+    }
+
+    .google {
+      background-color: #dd4b39;
+      color: white;
+
+    }
+  </style>
+</head>
+<body>
+<div class="loginPage container-fluid">
+  <div class="row" style="height: 100vh">
+    <div class="col-lg-12 col-xl-12 col-sm-12 col-md-12 col-xs-12">
+      <div class="col-lg-4 container-fluid "></div>
+      <div class="col-lg-4 container-fluid shadow-lg p-3 mb-5 bg-white rounded  my-5"
+           style="background-color: white; border-radius: 5px">
+        <form (ngSubmit)="onSubmit()" [formGroup]="loginForm">
+          <div class="row d-flex justify-content-center">
+            <h3 class="text-center mt-3">Đăng nhập</h3>
+          </div>
+          <div class="row input-group  mx-auto mt-2  ">
+            <div class="input-group-prepend">
+              <span class="input-group-text">&nbsp;<i class="fa fa-user" aria-hidden="true"></i>&nbsp;&nbsp;</span>
+            </div>
+            <input type="text" class="form-control" formControlName="username"
+                   placeholder="Tài khoản" style="height: 45px">
+          </div>
+          <div class="row d-flex justify-content-center ">
+            <p *ngIf="loginForm.controls.username.errors?.required &&
+              loginForm.controls.username.touched"
+               class="text-danger">
+              Vui lòng nhập tên tên khoản và không để trống
+            </p>
+          </div>
+          <div class="row input-group mx-auto mt-3 ">
+            <div class="input-group-prepend">
+              <span class="input-group-text">&nbsp;<i class="fa fa-key" aria-hidden="true"></i>&nbsp;</span>
+            </div>
+            <input type="password" formControlName="password" class="form-control"
+                   placeholder="Mật Khẩu" style="height: 45px">
+          </div>
+          <div class="row d-flex justify-content-center mt-1" >
+            <p *ngIf="loginForm.controls.password.errors?.required &&
+              loginForm.controls.password.touched"
+               class="text-danger">
+            Vui lòng nhập mật khẩu và không để trống
+            </p>
+          </div>
+          <div class="row d-flex justify-content-center mt-1" >
+            <p *ngIf="loginForm.controls.password.errors?.pattern &&
+              loginForm.controls.password.touched"
+             class="text-danger" >
+
+            Mật khẩu tổi thiểu 8 kí tự, 1 chữ thườmg, 1 chữ in hoa và 1 số
+            </p>
+          </div>
+
+          <div class="row mt-3">
+            <div class="col-lg-3"></div>
+            <div class="col-lg-6 d-flex justify-content-center">
+              <div class="row">
+                  <button type="submit" (click)="onSubmit()" class=" rounded btn btn-danger ">
+                    Đăng nhập
+                  </button>
+                  <button type="reset" (click)="reset()" class="  rounded btn btn-dark ml-3">
+                    Nhập Lại
+                  </button>
+              </div>
+            </div>
+            <div class="col-lg-3"></div>
+          </div>
+          <div class="row mt-3">
+            <div class="col-lg-6 d-flex justify-content-center">
+              <a [routerLink]="['/authentication/forgot-password']" >Quên mặt khẩu?</a>
+            </div>
+            <div class="col-lg-6 d-flex justify-content-center" >
+              <a [routerLink]="['/authentication/sign-up']">Tạo tài khoản mới?</a>
+            </div>
+          </div>
+          <div class="row mt-1">
+            <div class="col-lg-4">
+              <hr>
+            </div>
+            <div class="col-lg-4 d-flex justify-content-center">Hoặc</div>
+            <div class="col-lg-4">
+              <hr>
+            </div>
+          </div>
+          <div class="row my-2">
+            <div class="col-lg-12 ">
+              <div class="row mt-2 d-flex justify-content-center">
+                <button type="button" class="fb btn rounded" (click)="loginFacebook()">
+                  <i class="fa fa-facebook fa-fw w-auto"></i> Đăng nhập bằng Facebook
+                </button>
+              </div>
+              <div class="row mt-2 d-flex justify-content-center">
+                <button class="google btn rounded " (click)="loginGoogle()">
+                  <i class="fa fa-google fa-fw"></i>Đăng nhập bằng Google+
+                </button>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="col-lg-4 container-fluid"></div>
+    </div>
+  </div>
+</div>
+</body>
+</html>
+
+
