--- a/sprint2-frontend/src/app/app-customer/customer-pay/pay/pay.component.html
+++ b/sprint2-frontend/src/app/app-customer/customer-pay/pay/pay.component.html
@@ -57,7 +57,7 @@
       <div class="row">
         <div [hidden]="totalMoneyMoMo > 0">
           <img (click)="payNothing()" class="paypalIcon"
-               src="../../../assets/paypal.PNG" alt="icon"/>
+               src="../../../../assets/paypal.PNG" alt="icon"/>
         </div>
         <div class="paypal" [hidden]="totalMoneyMoMo <= 0">
           <p #paypalRef></p>
@@ -72,4 +72,4 @@
       Quý khách hiện tại chưa đăng ký thẻ thành viên nào.</h3>
   </div>
 </div>
- 
+
