--- a/sprint2-frontend/src/app/app-customer/customer-pay/successfully-pay/successfully-pay.component.css
+++ b/sprint2-frontend/src/app/app-customer/customer-pay/successfully-pay/successfully-pay.component.css
@@ -1,5 +1,4 @@
 img {
-  width: 100%;
   margin-bottom: 2%;
 }
 
@@ -13,4 +12,16 @@ img {
 
 #message {
   margin: -2% 0;
+}
+
+#succeed {
+  width: 99%;
+}
+
+p {
+  margin: 0 0 0 0;
+}
+
+#messageSucceed {
+  margin: 1.1% 0 1.5% 0;
 }
