--- a/sprint2-frontend/src/app/app-admin/statistic/statistic-overview/statistic-overview.component.html
+++ b/sprint2-frontend/src/app/app-admin/statistic/statistic-overview/statistic-overview.component.html
@@ -16,8 +16,8 @@
             <hr class="border border-warning">
           </div>
         </div>
-        <div class="row mt-4">
-          <div class="col-lg-12 col-md-12 col-sm-12 col-xl-12 mt-5">
+        <div class="row">
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xl-12 mt-4">
             <div>
               <canvas id="canvas" style="position: relative"></canvas>
             </div>
@@ -56,13 +56,13 @@
             </table>
           </div>
         </div>
-        <div class="row border mr-0">
-          <div class="statistics col-12  mt-3">
-            <h5>Phiên Bản Hệ Thống</h5>
-            <div class="mt-3 mb-4">
-              <p>Phiên bản hiện tại v1.0.0. Cập nhập lần cuối 28.12.2020.</p>
-              <p>License By C0620G1!</p>
-            </div>
+      </div>
+      <div class="row ml-1">
+        <div class="statistics col-lg-12 col-md-12 col-sm-12 col-xl-12 mt-3">
+          <h5>Phiên Bản Hệ Thống</h5>
+          <div class="mt-3 mb-4">
+            <p>Phiên bản hiện tại v1.0.0. Cập nhập lần cuối 28.12.2020.</p>
+            <p>License By C0620G1!</p>
           </div>
         </div>
       </div>
