--- a/sprint2-frontend/src/app/app-admin/statistic/statistic-ticket/statistic-ticket.component.css
+++ b/sprint2-frontend/src/app/app-admin/statistic/statistic-ticket/statistic-ticket.component.css
@@ -3,11 +3,11 @@
   background-size: cover;
   background-repeat: no-repeat;
 }
-.statistics {
-  background-image: url("https://msmobile.com.vn/upload_images/images/hinh-nen-powerpoint-mau-xanh-da-troi-9.jpg") !important;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
+/*div.row.mr-2 {*/
+/*  background-image: url("https://msmobile.com.vn/upload_images/images/hinh-nen-powerpoint-mau-xanh-da-troi-9.jpg") !important;*/
+/*  background-size: cover;*/
+/*  background-repeat: no-repeat;*/
+/*}*/
 
 .statistics .pcx {
   font-weight: bolder;
